@@ -1,1 +1,2 @@
 IDLE_VERSION = "0.8"
+IDLEFORK_VERSION = "0.8.1"
